[gd_scene load_steps=8 format=3 uid="uid://2vxsrnyj5r0i"]

[ext_resource type="Script" uid="uid://c2ksi1gkyv6cg" path="res://MinimalWorkingGame/minimal_main_menu.gd" id="1_u8dn4"]
[ext_resource type="PackedScene" uid="uid://cadg5ju3m7by8" path="res://GodotASCIIToolKit/Controls/Buttons/ascii_boxed_text_button.tscn" id="1_v0ftd"]

[sub_resource type="Animation" id="Animation_kriwc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_71hay"]
resource_name = "fade_in"
length = 0.16667001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yrdss"]
resource_name = "fade_in_out"
length = 1.0000033
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6666667, 0.8333333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cipsj"]
resource_name = "fade_out"
length = 0.16667001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cipsj"]
_data = {
&"RESET": SubResource("Animation_kriwc"),
&"fade_in": SubResource("Animation_71hay"),
&"fade_in_out": SubResource("Animation_yrdss"),
&"fade_out": SubResource("Animation_cipsj")
}

[node name="MinimalMainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u8dn4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="ButtonControl" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -48.0
offset_right = 80.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="ASCIIPlayButton" parent="ButtonControl" instance=ExtResource("1_v0ftd")]
unique_name_in_owner = true
layout_mode = 1
offset_right = 160.0
text = "PLAY"
horizontal_alignment = 1

[node name="ASCIIQuitButton" parent="ButtonControl" instance=ExtResource("1_v0ftd")]
unique_name_in_owner = true
layout_mode = 1
offset_top = 48.0
offset_right = 160.0
offset_bottom = 96.0
text = "QUIT"
horizontal_alignment = 1

[node name="FadePlayer" type="AnimationPlayer" parent="ButtonControl"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_cipsj")
}
